<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WajedBuilding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarDemo"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginLeft="35sp"
                android:layout_marginRight="35sp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/wajedBuilding"
                    android:textSize="@dimen/toolbar_text_size" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:orientation="vertical">

            <SearchView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="start"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25sp"
                        android:layout_marginRight="25sp"
                        android:layout_marginBottom="25sp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/wGroundFloor"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                style="@android:style/Widget.Button.Small"
                                android:textSize="@dimen/button_size"
                                android:text="@string/ground_floor"
                                android:background="@drawable/ic_launcher_background"
                                tools:ignore="DuplicateIds" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView250"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView"
                                tools:ignore="DuplicateIds" />

                            <TextView
                                android:id="@+id/textView261"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView"
                                tools:ignore="DuplicateIds" />
                        </LinearLayout>

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25sp"
                        android:layout_marginRight="25sp"
                        android:layout_marginBottom="25sp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/wajedFirstFloor"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                style="@android:style/Widget.Button.Small"
                                android:textSize="@dimen/button_size"
                                android:text="@string/first_floor"
                                android:background="@drawable/ic_launcher_background"
                                tools:ignore="DuplicateIds" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView240"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView"
                                tools:ignore="DuplicateIds" />

                            <TextView
                                android:id="@+id/textView230"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView"
                                tools:ignore="DuplicateIds" />
                        </LinearLayout>

                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:alwaysDrawnWithCache="false"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25sp"
                        android:layout_marginRight="25sp"
                        android:layout_marginBottom="25sp"
                        android:layout_weight="1"
                        android:alwaysDrawnWithCache="false"
                        android:animateLayoutChanges="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/wajedSecondFloor"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                style="@android:style/Widget.Button.Small"
                                android:textSize="@dimen/button_size"
                                android:text="@string/second_floor"
                                android:background="@drawable/ic_launcher_background" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView25"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView" />

                            <TextView
                                android:id="@+id/textView26"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView" />
                        </LinearLayout>

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25sp"
                        android:layout_marginRight="25sp"
                        android:layout_marginBottom="25sp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/wajedThirdFloor"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                style="@android:style/Widget.Button.Small"
                                android:textSize="@dimen/button_size"
                                android:text="@string/third_floor"
                                android:background="@drawable/ic_launcher_background" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView24"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView" />

                            <TextView
                                android:id="@+id/textView23"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView" />
                        </LinearLayout>

                    </FrameLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="25sp"
                    android:baselineAligned="false"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25sp"
                        android:layout_marginBottom="25sp"
                        android:layout_marginLeft="25sp"
                        android:layout_weight="1">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35sp"
                        android:layout_marginRight="35sp"
                        android:layout_marginBottom="25sp"
                        android:layout_weight="0.5">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/wajedForthFloor"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                style="@android:style/Widget.Button.Small"
                                android:textSize="@dimen/button_size"
                                android:text="@string/forth_floor"
                                android:background="@drawable/ic_launcher_background"
                                tools:ignore="DuplicateIds" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView25"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView"
                                tools:ignore="DuplicateIds" />

                            <TextView
                                android:id="@+id/textView26"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView"
                                tools:ignore="DuplicateIds" />
                        </LinearLayout>

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25sp"
                        android:layout_marginBottom="25sp"
                        android:layout_marginLeft="25sp"
                        android:layout_weight="1">

                    </FrameLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>